# procure-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
data/inventory/: inventory.csv
data/prompt_examples/: marian_demo.expected.json  marian_demo.txt
data/synthetic_quotes/: 01_aloe_corp_clean_tabular.expected.json  01_aloe_corp_clean_tabular.txt  02_aloe_corp_prose_email.expected.json  02_aloe_corp_prose_email.txt  03_rootwise_nonstandard_columns.expected.json  acme-fasteners_Q-2026-04881.notes.md  aloe-corp_2026-04-21-followup.expected.json  continental_CI-Q-7740.csv  continental_CI-Q-7740.expected.json  harbor-chemical_HC-Q-2026-451.expected.json  meridian_MSC-04-26-0992.expected.json  meridian_MSC-04-26-0992.md  meridian_MSC-04-26-0992.notes.md  northstar-pkg_NS-26-1188.eml  northstar-pkg_NS-26-1188.expected.json  nutrigrow_NG-26-0418.notes.md  pacific-agri_PAS-Q-25774.expected.json  pacific-agri_PAS-Q-25774.txt  pacific-coast_PCA-26-1183.csv  (+35 more)
docs/: build_log.md  from_primitives_to_langgraph.md
evals/: comparator.py  run.py
migrations/: 0001_init.sql  0002_seed_products.sql  0003_pg_trgm.sql  0004_agent_runs_thread_id.sql
scripts/: bootstrap_prod_db.py  generate_seed_sql.py  migrate.py  setup_checkpointer.py
tests/: test_comparator.py  test_db.py  test_graph.py  test_inventory.py  test_migrations.py  test_normalize.py  test_smoke.py
web/: .dockerignore  Dockerfile  biome.json  next.config.ts  package.json  pnpm-lock.yaml  railway.toml
(+26 files in other folders)
