[project]
name = "procure-agent"
version = "0.1.0"
description = "Manufacturing-ops AI agent for SMB procurement workflows."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langsmith>=0.1.130",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.39.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/procure_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
